NAS-138155: fix: access icons spilling out of row
* this was actually already fixed on mobile. see NAS-137822.

* on the user management page in the user list, the access icons were
occassionally spilling over the row boundary. this patch adds a margin
and permits the row to expand for the icons.

--- a/src/app/pages/credentials/users/all-users/user-list/user-access-cell/user-access-cell.component.scss
+++ b/src/app/pages/credentials/users/all-users/user-list/user-access-cell/user-access-cell.component.scss
@@ -3,4 +3,8 @@
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
+
+  ix-icon {
+    margin: 4px 0;
+  }
 }
