--- a/src/assets/styles/scss-imports/variables.scss
+++ b/src/assets/styles/scss-imports/variables.scss
@@ -11,7 +11,7 @@ $breakpoint-min-mobile: 320px;
 /**
  * Use $breakpoint-xs and other variables.
  */
-$breakpoint-tablet: 767px;
+$breakpoint-tablet: 800px;
 $breakpoint-singlecolumn: $breakpoint-md;
 $breakpoint-dualcolumn-slim: 1680px;
 $breakpoint-dualcolumn: $breakpoint-lg;
